# django-models

./: db.sqlite3  manage.py  pyproject.toml
nack_tracker_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: snack_detail.html  snack_list.html
templetes/: base.html
